Fix display wrapping

--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ body {
     justify-content: flex-end;
     align-items: end;
     font-size: 40px;
+    word-break: break-all;
 }
 
 button {
